解决jar包无法获取resource资源